--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,14 @@ code {
   margin: 0;
   padding: 0;
 }
+body{
+  background-color:aqua;
+}
+.ref{
+  padding: 4px;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-size: 1.5rem;
+  cursor: pointer;
+
+}
